--- a/Tidy_Data/Tidy-Data-Project.ipynb
+++ b/Tidy_Data/Tidy-Data-Project.ipynb
@@ -14,6 +14,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\"\"\"\n",
+    "Olympic Medal Tidy Data Project\n",
+    "\n",
+    "Author: Gabriela Sanchez\n",
+    "Date: March 2025\n",
+    "Description: This notebook cleans and analyzes the 2008 Olympic dataset using tidy data principles.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Step-by-Step Explanation\n",
     "\n",
     "1. **Data Transformation (Tidy Data Principles)**:\n",
